Update approval hub accept button colors

--- a/src/approval-hub.html
+++ b/src/approval-hub.html
@@ -395,14 +395,14 @@
         }
 
         .btn-accept {
-            background: #55dd88;
+            background: #1a6637;
             color: #ffffff;
-            border-color: #55dd88;
+            border-color: #1a6637;
         }
 
         .btn-accept:hover {
-            background: #66ee99;
-            border-color: #66ee99;
+            background: #15552e;
+            border-color: #15552e;
         }
 
         .json-key {
@@ -577,14 +577,14 @@
         }
 
         .btn-confirm-accept {
-            background: #55dd88;
+            background: #1a6637;
             color: #ffffff;
-            border-color: #55dd88;
+            border-color: #1a6637;
         }
 
         .btn-confirm-accept:hover {
-            background: #66ee99;
-            border-color: #66ee99;
+            background: #15552e;
+            border-color: #15552e;
         }
         
         .header-right {
