--- a/src/approval-hub.html
+++ b/src/approval-hub.html
@@ -835,7 +835,7 @@
             </div>
 
             <div class="accept-reason" id="acceptPanel" style="display:none;">
-                <label for="acceptText">Optional comment (only sent to Mariam if provided):</label>
+                <label for="acceptText">Optional comment (only sent to Mariam if provided. Leave blank for no comment.):</label>
                 <textarea id="acceptText" placeholder="Optional: add context or a note about why you approved."></textarea>
                 <div class="accept-actions">
                     <button class="btn btn-cancel" onclick="cancelAccept()">Cancel</button>
