--- a/src/approval-hub.html
+++ b/src/approval-hub.html
@@ -176,11 +176,13 @@
             background: #1a1a1a;
             border-radius: 12px;
             padding: 20px;
+            padding-bottom: 32px;
             border: 1px solid #2a2a2a;
             height: 100%;
             overflow-y: auto;
             display: flex;
             flex-direction: column;
+            scroll-padding-bottom: 32px;
         }
 
         .email-original {
@@ -188,11 +190,13 @@
             background: #1a1a1a;
             border-radius: 12px;
             padding: 20px;
+            padding-bottom: 32px;
             border: 1px solid #2a2a2a;
             height: 100%;
             overflow-y: auto;
             display: flex;
             flex-direction: column;
+            scroll-padding-bottom: 32px;
         }
 
         @media (max-width: 1200px) {
